--- a/Fichas/Tormenta/TRPG/1.lfm
+++ b/Fichas/Tormenta/TRPG/1.lfm
@@ -2,15 +2,17 @@
 <form name="Tormenta01" align="client" theme="dark">
 
 	<scrollBox align="client">
+	
+	<rectangle width="1010" height="700" color="DimGray" xradius="10" yradius="10"/>
+	<image left="530" top="30" width="400" height="147" src="img/LogoTormenta.png"/>
 
 	<template name="Principal">
-		<rectangle left="5" top="0" color="Gainsboro" width="155" xradius="2" yradius="2"/>
+		<rectangle left="5" top="0" color="Gainsboro" width="155" height="25" xradius="2" yradius="2"/>
 		<label left="8" top="4" width="155" height="20" text="$(texto)" horzTextAlign="leading" fontSize="15.0" fontStyle="bold" fontColor="black"/>
 		<edit left="175" top="0" width="30" height="25" field="$(field)" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
-        <edit left="210" top="0" width="30" height="25" field="$(field)_M" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
+        <edit left="210" top="0" width="30" height="25" field="$(field2)" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
+		<edit left="245" top="0" width="30" height="25" field="$(field3)" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
 	</template>
-
-	<rectangle width="1010" height="700" color="DimGray" xradius="10" yradius="10"/>
 
 	<layout left="10" top="10" width="305" height="55">
 		<rectangle left="7" top="1" color="Gainsboro" width="170" height="23" xradius="2" yradius="2"/>
@@ -60,37 +62,134 @@
 		<edit field="divindade" left="1" top="23" width="124" height="30" fontSize="15.0" fontStyle="bold"/>
 	</layout>
 	
-	<image left="530" top="30" width="400" height="147" src="img/LogoTormenta.png"/>
-	
-	<layout left="1" top="220" width="250" height="300">
-	
+	<layout left="1" top="220" width="290" height="200">
 		<rectangle left="57" top="3" color="Gainsboro" width="60" height="15" xradius="2" yradius="2"/>
 		<label left="59" top="5" width="65" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Habilidades"/>
-		
 		<rectangle left="181" top="3" color="Gainsboro" width="28" height="15" xradius="2" yradius="2"/>
 		<label left="183" top="5" width="28" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Valor"/>
-		
 		<rectangle left="216" top="3" color="Gainsboro" width="28" height="15" xradius="2" yradius="2"/>
 		<label left="219" top="5" width="28" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Mod"/>
-		
+		<rectangle left="251" top="3" color="Gainsboro" width="28" height="15" xradius="2" yradius="2"/>
+		<label left="253" top="5" width="28" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Dano"/>
 		<layout left="5" top="15" width="290" height="25" >
-			<Principal field="forca" texto="Força(FOR)"/>
+			<Principal field="forca" field2="modforca" field3="danoforca" texto="Força(FOR)"/>
 		</layout>
 		<layout left="5" top="45" width="290" height="25" >
-			<Principal field="destreza" texto="Destreza(DES)"/>
+			<Principal field="destreza" field2="moddestreza" field3="danodestreza" texto="Destreza(DES)"/>
 		</layout>
 		<layout left="5" top="75" width="290" height="25" >
-			<Principal field="constituicao" texto="Constituição(CON)"/>
+			<Principal field="constituicao" field2="modconstituicao" field3="danoconstituicao" texto="Constituição(CON)"/>
 		</layout>
 		<layout left="5" top="105" width="290" height="25" >
-			<Principal field="inteligencia" texto="inteligência(INT)"/>
+			<Principal field="inteligencia" field2="modinteligencia" field3="danointeligencia" texto="inteligência(INT)"/>
 		</layout>
 		<layout left="5" top="135" width="290" height="25" >
-			<Principal field="sabedoria" texto="Sabedoria(SAB)"/>
+			<Principal field="sabedoria" field2="modsabedoria" field3="danosabedoria" texto="Sabedoria(SAB)"/>
 		</layout>
 		<layout left="5" top="165" width="290" height="25" >
-			<Principal field="carisma" texto="Carisma(CAR)"/>
+			<Principal field="carisma" field2="modcarisma" field3="danocarisma" texto="Carisma(CAR)"/>
 		</layout>
+	</layout>
+	
+	<dataLink fields="{'forca', 'destreza', 'constituicao', 'inteligencia', 'sabedoria', 'carisma'}">
+                <event name="onChange">
+                        local mod = math.floor(((sheet.forca or 10) / 2) - 5);
+                        if (mod >= 0) then
+                                mod = "+" .. mod;
+                        end;
+                        sheet.modforca = mod;
+                </event>
+				<event name="onChange">
+                        local mod = math.floor(((sheet.destreza or 10) / 2) - 5);
+                        if (mod >= 0) then
+                                mod = "+" .. mod;
+                        end;
+                        sheet.moddestreza = mod;
+                </event>
+				<event name="onChange">
+                        local mod = math.floor(((sheet.constituicao or 10) / 2) - 5);
+                        if (mod >= 0) then
+                                mod = "+" .. mod;
+                        end;
+                        sheet.modconstituicao = mod;
+                </event>
+				<event name="onChange">
+                        local mod = math.floor(((sheet.inteligencia or 10) / 2) - 5);
+                        if (mod >= 0) then
+                                mod = "+" .. mod;
+                        end;
+                        sheet.modinteligencia = mod;
+                </event>
+				<event name="onChange">
+                        local mod = math.floor(((sheet.sabedoria or 10) / 2) - 5);
+                        if (mod >= 0) then
+                                mod = "+" .. mod;
+                        end;
+                        sheet.modsabedoria = mod;
+                </event>
+				<event name="onChange">
+                        local mod = math.floor(((sheet.carisma or 10) / 2) - 5);
+                        if (mod >= 0) then
+                                mod = "+" .. mod;
+                        end;
+                        sheet.modcarisma = mod;
+                </event>
+			</dataLink>
+	
+	<layout left="316" top="220" width="693" height="41">
+		<rectangle left="1" top="15" color="Gainsboro" width="100" height="25" xradius="2" yradius="2"/>
+		<label left="43" top="9" width="25" height="25" fontSize="14" fontStyle="bold" fontColor="black" text="CA"/>
+		<label left="7" top="20" width="100" height="25" fontSize="10" fontColor="black" text="Classe de Armadura"/>
+		
+		<rectangle left="131" top="3" color="Gainsboro" width="28" height="15" xradius="2" yradius="2"/>
+		<label left="133" top="5" width="28" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Total"/>
+		<edit left="115" top="15" width="60" height="25" field="totalca" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
+
+		<rectangle left="190" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
+		<label left="193" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="="/>
+		
+		<rectangle left="229" top="3" color="Gainsboro" width="52" height="15" xradius="2" yradius="2"/>
+		<label left="229" top="5" width="58" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="1/2 Nv+10"/>
+		<edit left="225" top="15" width="60" height="25" field="ca1" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
+		
+		<rectangle left="295" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
+		<label left="298" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="+"/>
+
+		<rectangle left="331" top="3" color="Gainsboro" width="48" height="15" xradius="2" yradius="2"/>
+		<label left="339" top="5" width="48" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Mod H"/>
+		<edit left="325" top="15" width="60" height="25" field="ca2" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
+
+		<rectangle left="395" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
+		<label left="398" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="+"/>
+
+		<rectangle left="429" top="3" color="Gainsboro" width="54" height="15" xradius="2" yradius="2"/>
+		<label left="432" top="5" width="48" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Armadura"/>
+		<edit left="426" top="15" width="60" height="25" field="ca3" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
+
+		<rectangle left="496" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
+		<label left="499" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="+"/>
+		
+		<rectangle left="537" top="3" color="Gainsboro" width="40" height="15" xradius="2" yradius="2"/>
+		<label left="540" top="5" width="48" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Escudo"/>
+		<edit left="527" top="15" width="60" height="25" field="ca4" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
+		
+		<rectangle left="597" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
+		<label left="600" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="+"/>
+		
+		<rectangle left="637" top="3" color="Gainsboro" width="40" height="15" xradius="2" yradius="2"/>
+		<label left="640" top="5" width="48" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Outros"/>
+		<edit left="627" top="15" width="60" height="25" field="ca5" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
+		
+		<dataLink fields="{'moddestreza', 'metadenivel', 'ca1', 'ca2', 'ca3', 'ca4', 'ca5'}">
+			<event name="onChange">
+				sheet.ca2 = sheet.moddestreza;
+				sheet.ca1 = (sheet.metadenivel)+10;
+			</event>
+			<event name="onChange">
+				sheet.totalca = (math.floor((sheet.ca1)or 0)+math.floor((sheet.ca2)or 0)+math.floor((sheet.ca3)or 0)+math.floor((sheet.ca4)or 0)+math.floor((sheet.ca5)or 0));
+			</event>
+		</dataLink>
+
 	</layout>
 	
 	</scrollBox>
